defined all necessary functions. next step is to define the CLI architecture.

--- a/tasks.json
+++ b/tasks.json
@@ -16,8 +16,92 @@
     {
         "id": 4,
         "description": "fifth task",
-        "status": "in progress",
+        "status": "in-progress",
         "createdAt": 1751663661.5910294,
-        "updatedAt": 1751663661.6069973
+        "updatedAt": 1751708417.6936553
+    },
+    {
+        "id": 5,
+        "description": "fifth task",
+        "status": "todo",
+        "createdAt": 1751706992.8244824,
+        "updatedAt": 1751706992.8244824
+    },
+    {
+        "id": 6,
+        "description": "fifth task",
+        "status": "todo",
+        "createdAt": 1751707030.640436,
+        "updatedAt": 1751707030.640436
+    },
+    {
+        "id": 7,
+        "description": "fifth task",
+        "status": "done",
+        "createdAt": 1751707334.1412783,
+        "updatedAt": 1751707334.1412783
+    },
+    {
+        "id": 8,
+        "description": "fifth task",
+        "status": "done",
+        "createdAt": 1751707358.4694393,
+        "updatedAt": 1751707358.4694393
+    },
+    {
+        "id": 9,
+        "description": "fifth task",
+        "status": "todo",
+        "createdAt": 1751707370.6255388,
+        "updatedAt": 1751707370.6255388
+    },
+    {
+        "id": 10,
+        "description": "fifth task",
+        "status": "todo",
+        "createdAt": 1751707385.3962724,
+        "updatedAt": 1751707385.3962724
+    },
+    {
+        "id": 11,
+        "description": "fifth task",
+        "status": "todo",
+        "createdAt": 1751707448.729794,
+        "updatedAt": 1751707448.729794
+    },
+    {
+        "id": 12,
+        "description": "fifth task",
+        "status": "todo",
+        "createdAt": 1751707472.9861557,
+        "updatedAt": 1751707472.9861557
+    },
+    {
+        "id": 13,
+        "description": "fifth task",
+        "status": "todo",
+        "createdAt": 1751707545.9904206,
+        "updatedAt": 1751707545.9904206
+    },
+    {
+        "id": 14,
+        "description": "fifth task",
+        "status": "todo",
+        "createdAt": 1751707627.1099021,
+        "updatedAt": 1751707627.1099021
+    },
+    {
+        "id": 15,
+        "description": "fifth task",
+        "status": "todo",
+        "createdAt": 1751707640.723409,
+        "updatedAt": 1751707640.723409
+    },
+    {
+        "id": 16,
+        "description": "fifth task",
+        "status": "todo",
+        "createdAt": 1751707651.2609897,
+        "updatedAt": 1751707651.2609897
     }
 ]
